--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Jan 14 2023 23:06:37 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Jan 15 2023 02:56:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63b58a0ebe4a8626ccbdf4ed" data-wf-site="63b58a0dbe4a86ab12bdf4e1" lang="de">
 <head>
   <meta charset="utf-8">
@@ -58,24 +58,16 @@
       <div class="container w-container">
         <div class="w-layout-grid about-grid">
           <div class="text-box"><img src="images/teteteeb-very_compressed-scale-2_00x2.png" loading="lazy" width="692" sizes="(max-width: 479px) 92vw, (max-width: 767px) 91vw, 600px" srcset="images/teteteeb-very_compressed-scale-2_00x2-p-500.png 500w, images/teteteeb-very_compressed-scale-2_00x2-p-800.png 800w, images/teteteeb-very_compressed-scale-2_00x2-p-1080.png 1080w, images/teteteeb-very_compressed-scale-2_00x2.png 1234w" alt="brunnen" class="about-image">
-            <p class="image-caption">Unser Biergarten</p>
+            <p class="image-caption">Impressionen unseres Biergarten</p>
           </div>
-          <div id="w-node-_2b496ba0-a607-fa92-da1d-62cc2e54a401-ccbdf4ed" class="w-richtext">
-            <h2>Text Text text text</h2>
-            <p>Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text.</p>
-            <p>Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text.</p>
-            <p>‍</p>
-            <h3>Text text text text</h3>
-            <p>Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text.</p>
-            <p>Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text .</p>
-          </div>
+          <p id="w-node-e1bde9eb-2512-8c23-38db-0fce54dd70ee-ccbdf4ed">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
         </div>
       </div>
     </div>
   </div>
   <div class="footer wf-section">
     <div class="footer-container w-container">
-      <div class="text-block">Copyright © 2010 Restaurant Kellari</div>
+      <div class="text-block">Copyright © 2010-2023 Restaurant Kellari · Gutsplatz 1 16515 Oranienburg · Telefon: 03301 57 55 49</div>
       <a href="index.html" class="link-5">Home</a>
       <a href="galerie.html" class="link-6">Galerie</a>
       <a href="speisekarte.html" class="link-7">Speisekarte</a>
