--- a/galerie.html
+++ b/galerie.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Jan 14 2023 23:06:37 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Jan 15 2023 02:56:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63b58a0ebe4a866bd1bdf4ef" data-wf-site="63b58a0dbe4a86ab12bdf4e1" lang="de">
 <head>
   <meta charset="utf-8">
@@ -55,16 +55,17 @@
       </div>
     </div>
     <div class="section-3 wf-section">
-      <a href="kel-502.html" class="link-block-4 w-inline-block"><img src="images/ga_12.jpg" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 1279px) 76vw, 850px" srcset="images/ga_12-p-500.jpg 500w, images/ga_12-p-800.jpg 800w, images/ga_12.jpg 850w" alt="restaurant" class="galleryimg3"></a>
-      <a href="kel-501.html" class="link-block-5 w-inline-block"><img src="images/ga_11.jpg" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 1279px) 76vw, 850px" srcset="images/ga_11-p-500.jpg 500w, images/ga_11-p-800.jpg 800w, images/ga_11.jpg 850w" alt="restaurant" class="galleryimg4"></a>
-      <a href="kel-452.html" class="link-block-6 w-inline-block"><img src="images/ga_13.jpg" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 1279px) 76vw, 850px" srcset="images/ga_13-p-500.jpg 500w, images/ga_13-p-800.jpg 800w, images/ga_13.jpg 850w" alt="restaurant" class="galleryimg5"></a>
-      <a href="kel-504.html" class="link-block-7 w-inline-block"><img src="images/ga_14.jpg" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 1279px) 76vw, 850px" srcset="images/ga_14-p-500.jpg 500w, images/ga_14-p-800.jpg 800w, images/ga_14.jpg 850w" alt="restaurant" class="galleryimg6"></a>
-      <a href="kel-407.html" class="link-block-8 w-inline-block"><img src="images/ga_15.jpg" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 1279px) 76vw, 850px" srcset="images/ga_15-p-500.jpg 500w, images/ga_15-p-800.jpg 800w, images/ga_15.jpg 850w" alt="restaurant" class="galleryimg7"></a>
+      <p class="paragraph-4">Besichtigen Sie unser Restaurant in einem virtuellen Rundgang.<br>Klicken Sie auf ein Bild, öffnen Sie das Panorama und steuern Sie es mit der Maus oder dem Touchscreen.<br></p>
+      <a href="kel-502.html" class="link-block-4 w-inline-block"><img src="images/ga_12.jpg" loading="lazy" sizes="100vw" srcset="images/ga_12-p-500.jpg 500w, images/ga_12-p-800.jpg 800w, images/ga_12.jpg 850w" alt="restaurant" class="galleryimg3"></a>
+      <a href="kel-501.html" class="link-block-5 w-inline-block"><img src="images/ga_11.jpg" loading="lazy" sizes="100vw" srcset="images/ga_11-p-500.jpg 500w, images/ga_11-p-800.jpg 800w, images/ga_11.jpg 850w" alt="restaurant" class="galleryimg4"></a>
+      <a href="kel-452.html" class="link-block-6 w-inline-block"><img src="images/ga_13.jpg" loading="lazy" sizes="100vw" srcset="images/ga_13-p-500.jpg 500w, images/ga_13-p-800.jpg 800w, images/ga_13.jpg 850w" alt="restaurant" class="galleryimg5"></a>
+      <a href="kel-504.html" class="link-block-7 w-inline-block"><img src="images/ga_14.jpg" loading="lazy" sizes="100vw" srcset="images/ga_14-p-500.jpg 500w, images/ga_14-p-800.jpg 800w, images/ga_14.jpg 850w" alt="restaurant" class="galleryimg6"></a>
+      <a href="kel-407.html" class="link-block-8 w-inline-block"><img src="images/ga_15.jpg" loading="lazy" sizes="100vw" srcset="images/ga_15-p-500.jpg 500w, images/ga_15-p-800.jpg 800w, images/ga_15.jpg 850w" alt="restaurant" class="galleryimg7"></a>
     </div>
   </div>
   <div class="footer wf-section">
     <div class="footer-container w-container">
-      <div class="text-block">Copyright © 2010 Restaurant Kellari</div>
+      <div class="text-block">Copyright © 2010-2023 Restaurant Kellari · Gutsplatz 1 16515 Oranienburg · Telefon: 03301 57 55 49</div>
       <a href="index.html" class="link-5">Home</a>
       <a href="galerie.html" aria-current="page" class="link-6 w--current">Galerie</a>
       <a href="speisekarte.html" class="link-7">Speisekarte</a>
