--- a/impressum.html
+++ b/impressum.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Jan 14 2023 23:06:37 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Jan 15 2023 02:56:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63b58a0ebe4a867a78bdf500" data-wf-site="63b58a0dbe4a86ab12bdf4e1" lang="de">
 <head>
   <meta charset="utf-8">
@@ -56,13 +56,20 @@
       </div>
     </div>
     <div id="impress" class="section light-grey wf-section">
+      <div class="w-embed"></div>
       <div class="container w-container">
         <div class="text-box _800px centered">
           <div class="rich-text w-richtext">
             <h3>Impressum</h3>
-            <p>Angaben gemäß § 5 TMG: Adroniki Spyridonos Gutsplatz 1 16515 Lehnitz Kontakt: Telefon: 03301 575549 E-Mail: info@kellari.de Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV: Adroniki Spyridonos Am Gutsplatz 1 16515 Lehnitz Quelle: erstellt mit dem Impressum-Generator Website von eRecht24.<br>Haftungsausschluss: Haftung für Inhalte Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</p>
-            <p>‍<br>Haftung für Links Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.<br>Urheberrecht Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.<br>Datenschutz Die Nutzung unserer Webseite ist in der Regel ohne Angabe personenbezogener Daten möglich. Soweit auf unseren Seiten personenbezogene Daten (beispielsweise Name, Anschrift oder eMail-Adressen) erhoben werden, erfolgt dies, soweit möglich, stets auf freiwilliger Basis. Diese Daten werden ohne Ihre ausdrückliche Zustimmung nicht an Dritte weitergegeben. Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail) Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht möglich. Der Nutzung von im Rahmen der Impressumspflicht veröffentlichten Kontaktdaten durch Dritte zur Übersendung von nicht ausdrücklich angeforderter Werbung und Informationsmaterialien wird hiermit ausdrücklich widersprochen. Die Betreiber der Seiten behalten sich ausdrücklich rechtliche Schritte im Falle der unverlangten Zusendung von Werbeinformationen, etwa durch Spam-Mails, vor.</p>
-            <p>‍<br>Quelle: Disclaimer von eRecht24, dem Portal zum Internetrecht von Rechtsanwalt Sören Siebert.</p>
+            <p><strong>Angaben gemäß § 5 TMG: </strong></p>
+            <p>Androniki Spyridonos <br>Restaurant Kellari <br>Gutsplatz 1 <br>16515 Oranienburg </p>
+            <p>‍<strong>Kontakt </strong></p>
+            <p>Telefon: 03301 57 55 49 <br>E-Mail: info@kellari.de </p>
+            <p>‍<strong>Umsatzsteuer-ID<br></strong>Umsatzsteuer-Identifikationsnummer gemäß § 27 a Umsatzsteuergesetz:<br>DE270158703</p>
+            <p>‍<strong>Redaktionell verantwortlich</strong></p>
+            <p>Androniki Spyridonos<br>Gutsplatz 1<br>16515 Oranienburg</p>
+            <p>‍<strong>Verbraucherstreitbeilegung / Universalschlichtungsstelle</strong></p>
+            <p>Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen. <br>‍<br>Quelle: e-Recht24.de</p>
           </div>
         </div>
       </div>
@@ -70,7 +77,7 @@
   </div>
   <div class="footer wf-section">
     <div class="footer-container w-container">
-      <div class="text-block">Copyright © 2010 Restaurant Kellari</div>
+      <div class="text-block">Copyright © 2010-2023 Restaurant Kellari · Gutsplatz 1 16515 Oranienburg · Telefon: 03301 57 55 49</div>
       <a href="index.html" class="link-5">Home</a>
       <a href="galerie.html" class="link-6">Galerie</a>
       <a href="speisekarte.html" class="link-7">Speisekarte</a>
