--- a/kontakt.html
+++ b/kontakt.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Jan 14 2023 23:06:37 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Jan 15 2023 02:56:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63b58a0ebe4a86cd1ebdf4f7" data-wf-site="63b58a0dbe4a86ab12bdf4e1" lang="de">
 <head>
   <meta charset="utf-8">
@@ -75,12 +75,9 @@
       </div>
     </div>
   </div>
-  <div class="section-5 wf-section">
-    <a href="about.html" class="link-3">Über uns</a>
-  </div>
   <div class="footer wf-section">
     <div class="footer-container w-container">
-      <div class="text-block">Copyright © 2010 Restaurant Kellari</div>
+      <div class="text-block">Copyright © 2010-2023 Restaurant Kellari · Gutsplatz 1 16515 Oranienburg · Telefon: 03301 57 55 49</div>
       <a href="index.html" class="link-5">Home</a>
       <a href="galerie.html" class="link-6">Galerie</a>
       <a href="speisekarte.html" class="link-7">Speisekarte</a>
