--- a/speisekarte.html
+++ b/speisekarte.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Jan 14 2023 23:06:37 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Jan 15 2023 02:56:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63b58a0ebe4a862813bdf4fd" data-wf-site="63b58a0dbe4a86ab12bdf4e1" lang="de">
 <head>
   <meta charset="utf-8">
@@ -69,6 +69,9 @@
             <a data-w-tab="Monatsempfehlungen" class="tab-link w-inline-block w-tab-link">
               <div id="monat">Monatsempfehlungen</div>
             </a>
+            <a data-w-tab="Mittagstisch" class="tab-link w-inline-block w-tab-link">
+              <div>Mittagstisch</div>
+            </a>
             <a data-w-tab="Weinkarte" class="tab-link w-inline-block w-tab-link">
               <div id="weine">Unsere Weine</div>
             </a>
@@ -84,39 +87,57 @@
                     <h2>Kalte Vorspeisen</h2>
                     <ul role="list">
                       <li><strong>Oliven mit Peperoni</strong><em><br>€3,90</em></li>
+                      <li>‍</li>
                       <li><strong>Tzatziki<em><br></em>‍</strong>griechischer Jogurt mit Knoblauch, geraspelter Gurke und kalt gepresstem Kalamata-Olivenöl<em><br>€5,50</em></li>
+                      <li>‍</li>
                       <li><strong>Chtipiti<em><br>‍</em></strong>grob passierter Fetakäse mit Knoblauch, pikanter Peperoni und kalt gepresstem Kalamata-Olivenöl<em><br>€5,90</em></li>
                     </ul>
                     <h2>Warme Vorspeisen</h2>
                     <ul role="list">
                       <li><strong>Garides Egio<em><br></em>‍</strong>in Olivenöl gebackene Garnelen, verfeinert mit Weißwein, an Tomaten-Schafskäsesauce<em><br>€12,90</em></li>
+                      <li>‍</li>
                       <li><em>‍</em><strong>Baby-Kalamaris<em><br></em>‍</strong>gebraten in Olivenöl mit frischem Knoblauch<em><br>€11,90</em></li>
+                      <li>‍</li>
                       <li><strong>Peperoni gegrillt<em><br>‍</em></strong>mit Knoblauch und Brot<em><br>€4,80</em></li>
+                      <li>‍</li>
                       <li><em>‍</em><strong>Keftedakia<em><br>‍</em></strong>gegrillte Hackfleischtaler nach griechischer Art, <br>serviert an Tzatziki<em><br>€6,90</em></li>
+                      <li>‍</li>
                       <li><strong>Gebackene Aubergine<em><br>‍</em></strong>mit Knoblauch-Tomatensauce<em><br>€6,90</em></li>
+                      <li>‍</li>
                       <li><em>‍</em><strong>Skordopsomo<em><br></em>‍</strong>Knoblauchbrot nach griechischer Bauernart<em><br>€3,50</em></li>
+                      <li>‍</li>
                       <li><strong>Mikti Pikilia<em><br>‍</em></strong>kalte und warme Vorspeisenvariation<em><br>€4,80 - klein<br>€15,90 - normal</em></li>
+                      <li>‍</li>
                       <li><em>‍</em><strong>Tiropitakia<em><br>‍</em></strong>Blätterteigtaschen gefüllt mit griechischem Schafskäse (Feta)<em><br>€6,10</em></li>
+                      <li>‍</li>
                       <li><strong>Spanakopitakia<em><br>‍</em></strong>Blätterteigtaschen gefüllt mit Spinat<em><br>€6,10</em>‍</li>
                     </ul>
                     <h2>Käsespezialitäten</h2>
                     <ul role="list">
                       <li><strong>Feta<em><br></em>‍</strong>griechischer Schafskäse, serviert mit Oregano, Kapernbeeren und kalt gepresstem Kalamata-Olivenöl<em><br>€6,50</em></li>
+                      <li>‍</li>
                       <li><em>‍</em><strong>Saganaki<em><br></em>‍</strong>panierter griechischer Schafskäse (Feta) aus der Pfanne<em><br>€7,90</em></li>
+                      <li>‍</li>
                       <li><strong>Gebackener Schafskäse (Feta)<em>‍</em></strong><em><br>€7,90</em></li>
+                      <li>‍</li>
                       <li><em>‍</em><strong>Chaloumi<em><br>‍</em></strong>gegrillter zypriotischer Käse aus Schafsund Kuhmilch, serviert auf gegrillten Tomatenscheiben<em><br>€8,10</em></li>
+                      <li>‍</li>
                       <li><strong>Graviera Katsikissia<em><br>‍</em></strong>griechischer Hartkäse aus Ziegenmilch im Sesammantel, serviert mit Oliventapenade<em><br>€8,90</em></li>
                     </ul>
                     <h2>Salate</h2>
                     <ul role="list">
                       <li><em>‍</em><strong>Anamikti Salata<em><br></em>‍</strong>gemischte Blattsalate der Saison, serviert mit Tomate, Gurke, Kalamata-Oliven und hausgemachter Chalkidiki-Vinaigrette<em><br>€6,50 - klein<br>€13,90 - mit Hähnchenbrustfilet</em></li>
+                      <li>‍</li>
                       <li><em>‍</em><strong>Choriatiki<em><br>‍</em></strong>Bauernsalat mit Schafskäse, Tomate, Gurke, Zwiebeln, großen Kapernbeeren, Spitzpaprika, Kalamata-Oliven und kalt gepresstem Olivenöl<em><br>€8,80</em></li>
+                      <li>‍</li>
                       <li><strong>Salata Graviera Kritis<em><br>‍</em></strong>kretischer Hartkäse in Sesamkruste, serviert auf gemischten Blattsalaten, Tomate, Gurke und hausgemachte Vinaigrette<em><br>€9,90</em>‍</li>
                     </ul>
                     <h2>Nudelgerichte</h2>
                     <ul role="list">
                       <li><em>‍</em><strong>Pennes Trilogia<em><br></em>‍</strong>Bio-Penne mit Hähnchenbrustfilet in einer Estragonsauce<em><br>€14,90</em></li>
+                      <li>‍</li>
                       <li><em>‍</em><strong>Makaronia Garides<em><br>‍</em></strong>Spaghetti mit Garnelen in einer Knoblauch-Tomatensauce nach Art des Hauses<em><br>€17,50</em></li>
+                      <li>‍</li>
                       <li><strong>Makaronia Lachanika<em><br>‍</em></strong>Spaghetti mit griechischem Schafskäse (Feta) und frischem Gemüse, wie Kirschtomaten, Paprika, Zucchini, Champignons<em><br>€13,90</em></li>
                       <li>‍</li>
                     </ul>
@@ -128,46 +149,70 @@
                     <h2>Hauptgerichte</h2>
                     <ul role="list">
                       <li><em>‍</em><strong>Souvlakia<em><br></em>‍</strong>Schweinefleischspieße vom Grill, serviert mit Reis<em><br>€14,50</em></li>
+                      <li>‍</li>
                       <li><em>‍</em><strong>Gyros<em><br>‍</em></strong>Schweinefleisch vom Drehspieß, serviert mit Tzatziki und Reis<em><br>€14,10</em></li>
+                      <li>‍</li>
                       <li><strong>Bifteki<em><br>‍</em></strong>gegrilltes Hackfleischsteak gefüllt mit Schafskäse (Feta), dazu Pommes frites<em><br>€16,90</em></li>
+                      <li>‍</li>
                       <li><em>‍</em><strong>Schweinesteak<em><br></em>‍</strong>gegrillt, mit Pommes frites<em><br>€15,90</em></li>
+                      <li>‍</li>
                       <li><em>‍</em><strong>Chirina Filetakia<em><br>‍</em></strong>Schweinefiletmedaillons mit Kräuterkruste, serviert mit Thymiansauce, Kartoffeln aus Gratin gedünstetem Gemüse<em><br>€19,20</em></li>
+                      <li>‍</li>
                       <li><strong>Kotopoulo<em><br>‍</em></strong>gegrilltes Hähnchenbrustfilet mit Reis<em><br>€16,90</em></li>
+                      <li>‍</li>
                       <li><em>‍</em><strong>Arni Kotsi<em><br></em>‍</strong>Lammhaxe, dazu Kritharaki (kleine, längliche griechische Nudeln) oder grüne Bohnen<em><br>€17,90</em></li>
+                      <li>‍</li>
                       <li><em>‍</em><strong>Arnissia Paidakia<em><br>‍</em></strong>Lammkoteletts vom Grill mit Knoblauchkartoffeln<em><br>€20,10</em></li>
+                      <li>‍</li>
                       <li><strong>Arnissia Fileta<em><br>‍</em></strong>Lammfilets vom Grill mit grünen Bohnen und Knoblauchkartoffeln<em><br>€24,90</em></li>
+                      <li>‍</li>
                       <li><em>‍</em><strong>Grillteller Kellari<em><br></em>‍</strong>Gyros, Souvlaki, Schweinesteak, Tzatziki, mit Pommes frites<em><br>€16,90</em></li>
+                      <li>‍</li>
                       <li><em>‍</em><strong>Anamikti Piatella<em><br>‍</em></strong>gemischter Fleischteller aus Souvlaki, Gyros, Biftekaki und Lammkotelett mit Reis und Tzatziki<em><br>€17,90</em></li>
+                      <li>‍</li>
                       <li><strong>Kotopoulo Gemisto<em><br>‍</em></strong>Hähnchenbrustfilet gefüllt mit griechischem Hartkäse und Paprikaschoten in einer Thymian-Oregano-Senfsauce, mit Butterreis<em><br>€17,90</em></li>
                       <li>‍</li>
                     </ul>
                     <h2>Unsere Pfännchengerichte</h2>
                     <ul role="list">
                       <li><strong>Gyros-Pfännchen<em><br></em>‍</strong>in Metaxasauce, mit Champignons, Zwiebeln, Paprika und Brot<em><br>€15,90</em></li>
+                      <li>‍</li>
                       <li><em>‍</em><strong>Lammfilet-Pfännchen<em><br>‍</em></strong>in Metaxasauce, mit Champignons, Zwiebeln, Paprika und Brot<em><br>€24,90</em></li>
+                      <li>‍</li>
                       <li><strong>Hähnchenbrustfilet-Pfännchen<em><br>‍</em></strong>in Metaxasauce, mit Champignons, Zwiebeln, Paprika und Brot<em><br>€17,50</em>‍</li>
                     </ul>
                     <h2>Überbackene Gerichte</h2>
                     <ul role="list">
                       <li><strong>Gyros Spezial<em><br></em>‍</strong>mit Metaxasauce und Schnittkäse überbacken, dazu Reis<em><br>€16,50</em></li>
+                      <li>‍</li>
                       <li><em>‍</em><strong>Hähnchenbrustfilet<em><br>‍</em></strong>mit Metaxasauce und Schnittkäse überbacken, dazu Reis<em><br>€17,50</em></li>
+                      <li>‍</li>
                       <li><strong>Schweinesteak<em><br>‍</em></strong>mit Metaxasauce und Schnittkäse überbacken, dazu Reis<em><br>€16,90</em></li>
+                      <li>‍</li>
                       <li><strong>Schweinefilet<em><br>‍</em></strong>mit Metaxasauce und Schnittkäse überbacken, dazu Reis<em><br>€19,90</em>‍</li>
                     </ul>
                     <h2>Fisch und Meeresfrüchte</h2>
                     <ul role="list">
                       <li><strong>Kalamari<em><br></em>‍</strong>mehlierter Riesenkalmar aus der Pfanne, dazu Backkartoffeln und Gemüse<em><br>€17,90</em></li>
+                      <li>‍</li>
                       <li><em>‍</em><strong>Solomos<em><br>‍</em></strong>Lachsfilet vom Grill, dazu Backkartoffeln und Gemüse<em><br>€22,90</em></li>
+                      <li>‍</li>
                       <li><strong>Garides<em><br>‍</em></strong>Riesengarnelen aus der Pfanne, dazu Backkartoffeln und Gemüse<em><br>€24,50</em></li>
+                      <li>‍</li>
                       <li><strong>Zanderfilet<em><br>‍</em></strong>dazu Backkartoffeln und Gemüse<em><br>€19,90</em>‍</li>
                     </ul>
                     <h2>Beilagen</h2>
                     <ul role="list">
                       <li><strong>Reis<em><br></em></strong><em>€2,00</em></li>
+                      <li>‍</li>
                       <li><em>‍</em><strong>Kritharaki<em><br>‍</em></strong>gemischter Fleischteller aus Souvlaki, Gyros, Biftekaki und Lammkotelett mit Reis und Tzatziki<em><br>€3,10</em></li>
+                      <li>‍</li>
                       <li><strong>Kellari Kartoffeln<em><br></em></strong><em>€4,90</em></li>
+                      <li>‍</li>
                       <li><strong>Grüne Bohnen<em><br></em></strong><em>€3,50</em></li>
+                      <li>‍</li>
                       <li><strong>Pommes frites<em>‍</em></strong><em><br>€2,90</em></li>
+                      <li>‍</li>
                       <li><strong>Backkartoffeln</strong><em><br>€4,50</em></li>
                       <li>‍</li>
                     </ul>
@@ -187,8 +232,8 @@
                     <h4>‍<em><br></em></h4>
                     <ul role="list">
                       <li>‍<strong>Gemista Manitaria</strong><em><br></em>mit Schnittkäse überbackene Champignons, gefüllt mit Spinat und griechischem Feta-Käse<em><br>€10,90</em></li>
-                      <li>‍<strong>Feta Filo</strong><em><br></em>In griechischem Filo-Teig eingewickelter Feta-Käse,mit Sesam und Honig<em><br>€10,90</em></li>
                       <li>‍</li>
+                      <li>‍<strong>Feta Filo</strong><em><br></em>In griechischem Filo-Teig eingewickelter Feta-Käse,mit Sesam und Honig<em><br>€10,90</em></li>
                     </ul>
                   </div>
                 </div>
@@ -198,16 +243,52 @@
                     <h3>Hauptgerichte</h3>
                     <h4>‍<em><br></em></h4>
                     <ul role="list">
-                      <li>‍<strong>Salata Halloumi</strong><em><br></em>Gebratener Halloumi auf Salatbett in süßlichem Öl-Balsamico Dressing, serviert in einer essbaren Brotschale<em><br>€17,90</em></li>
+                      <li>‍<strong>Chirino me Botana</strong><em><br></em>Schweinefilet dazu Kräuterpüree an einer leichten Sauce<em><br>€26,90</em></li>
                       <li>‍</li>
-                      <li><strong>Salata Solomos</strong><em><br></em>Lachsfilet auf gemischtem Salat in einer leichten Zitronen-Senf-Sauce, verfeinert mit frischem Basilikum<em><br>€20,90</em>‍</li>
+                      <li><strong>Arni Krasato</strong><em><br></em>Gegrilltes Lammfilet an einer Rotwein-Sauce, dazu Babykartoffeln und Champignons<em><br>€29,90</em>‍</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div data-w-tab="Mittagstisch" class="w-tab-pane">
+              <h3 class="heading-2">Montag und Mittwoch bis Freitag <br>11:30 Uhr - 14:30 Uhr <br>(außer feiertags)<br>‍</h3>
+              <div class="w-layout-grid menu-grid">
+                <div class="text-box">
+                  <div class="menu-rich-text w-richtext">
+                    <ul role="list">
+                      <li>‍<strong>M1 Gyros Pfanne<br>‍</strong>Gyros in Metaxasauce, Champignons und Paprika, dazu unser hausgemachtes Brot<em><br>€7.90</em></li>
+                      <li><em>‍</em></li>
+                      <li><em>‍</em><strong>M2 Gyros<br><em>‍</em></strong>mit Schnittkäse und Metaxasauce überbacken als Beilage Pommes frites<em><br>€7.90</em></li>
+                      <li><em>‍</em></li>
+                      <li><em>‍</em><strong>M3 Rinderleber<br></strong>mit gerösteten Zwiebeln, als Beilage Reis<em><br>€7.50</em>‍</li>
                       <li>‍</li>
-                      <li>‍<strong>Salata Arni</strong><em><br></em>Lammfilet auf gemischtem Salat in einer leichten Orangen-Sauce, verfeinert mit frischem Basilikum<br>‍<em>€20,90</em>‍</li>
+                      <li>‍<strong>M4 Schweinesteak<br>‍</strong>mit Schnittkäse und Metaxasauce überbacken, als Beilage Pommes frites<em><br>€7.90</em></li>
+                      <li><em>‍</em></li>
+                      <li><em>‍</em><strong>M5 Gegrilltes Hähnchenbrustfilet<br><em>‍</em></strong>mit Schnittkäse und Metaxasauce überbacken, als Beilage Pommes frites<em><br>€8.90</em></li>
+                      <li><em>‍</em></li>
+                      <li><em>‍</em><strong>M6 Hähnchenbrustfiletpfanne<br></strong>Hähnchenbrustfilet in Metaxasauce, Champignons und Paprika, dazu hausgemachtes Brot<em><br>€8.90</em></li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="text-box">
+                  <div class="menu-rich-text w-richtext">
+                    <ul role="list">
+                      <li>‍<strong>M7 Bifteki<br>‍</strong>Hackfleischsteak gefüllt mit Schafskäse (Feta) vom Grill, als Beilage Pommes frites<em><br>€8.90</em>‍</li>
                       <li>‍</li>
-                      <li>‍<strong>Gyros Lachanikon</strong><em><br></em>Gemüsepfanne mit in Streifen geschnittenem Schweinefleisch vom klassischen Gyros-Drehspieß. Vorab servieren wir Ihnen dazu einen gemischten Salat.<br>‍<em>€17,90</em></li>
+                      <li>‍<em>‍</em><strong>M8 Hackbällchen<br><em>‍</em></strong>in einer leichten Tomatensauce mit Spaghetti<em><br>€7.90</em></li>
+                      <li><em>‍</em></li>
+                      <li><em>‍</em><strong>M9 Pennes Trilogia<br></strong>Bio-Penne mit Hähnchenbrustfilet in einer Estragonsauce<em><br>€9.50</em></li>
+                      <li><em>‍</em></li>
+                      <li><em>‍</em>‍<strong>M10 Choriatiki<br>‍</strong>Bauernsalat mit Schafskäse (Feta), Tomate, Gurke, Zwiebeln, große Kapernbeeren, Spitzpaprika, Kalamata Oliven und kalt gepresstem Kalamata Olivenöl<em><br>€7.40</em></li>
+                      <li><em>‍</em></li>
+                      <li><em>‍</em><strong>M11 Makaronia Lachanika<br><em>‍</em></strong>Spaghetti mit griechischem Schafskäse (Feta) und frischem Gemüse, wie Kirschtomaten, Paprika, Zucchini und Champignons<em><br>€8.00</em></li>
+                      <li><em>‍</em></li>
+                      <li><em>‍</em><strong>M12 Chirini Tigania<br></strong>Hackfleischtaler in Metaxasauce, mit Champignons, Paprika und Brot<em><br>€8.50</em></li>
+                    </ul>
+                    <ul role="list">
                       <li>‍</li>
                     </ul>
-                    <h2>‍</h2>
                   </div>
                 </div>
               </div>
@@ -282,16 +363,22 @@
                   <div class="menu-rich-text w-richtext">
                     <h2>Zum Ausmalen und Mitnehmen!</h2>
                     <ul role="list">
-                      <li>‍<strong>Micky Maus<br>‍</strong>Schweineschnitzel mit Pommes frites und Salat<em><br>€7.50<br><br>‍</em><strong>Donald Duck<br><em>‍</em></strong>Hähnchen-Nuggets mit Pommes frites und Salat<em><br>€7.50</em></li>
-                      <li><em>‍</em><strong>Susi und Strolch<br></strong>Spaghetti mit Tomatensauce<em><br>€6.50</em></li>
+                      <li>‍<strong>Asterix<br>‍</strong>Fischstäbchen mit Pommes frites und Salat<em><br>€7.00</em></li>
+                      <li><em>‍</em></li>
+                      <li><em>‍</em><strong>Donald Duck<br><em>‍</em></strong>Hähnchen-Nuggets mit Pommes frites und Salat<em><br>€7.50</em><strong>‍</strong></li>
+                      <li>‍</li>
+                      <li><strong>Micky Maus<br>‍</strong>Schweineschnitzel mit Pommes frites und Salat<em><br>€7.50</em></li>
                     </ul>
                   </div>
                 </div>
                 <div class="text-box">
                   <div class="menu-rich-text w-richtext">
-                    <h2><strong>ㅤㅤㅤㅤㅤ</strong>‍</h2>
-                    <p>‍<strong>Asterix<br>‍</strong>Fischstäbchen mit Pommes frites und Salat<em><br>€7.00</em><strong>‍</strong></p>
-                    <p><strong>Pinocchio<br>‍</strong>Hähnchenbrustfilet gegrillt mit Pommes frites und Salat<br><em>€7.90</em></p>
+                    <h2>ㅤ</h2>
+                    <ul role="list">
+                      <li>‍<strong>Pinocchio<br>‍</strong>Hähnchenbrustfilet gegrillt mit Pommes frites und Salat<em><br>€7.90</em></li>
+                      <li><em>‍</em></li>
+                      <li><em>‍</em><strong>Susi und Strolch<br></strong>Spaghetti mit Tomatensauce<em><br>€6.50</em></li>
+                    </ul>
                   </div>
                 </div>
               </div>
@@ -303,7 +390,7 @@
   </div>
   <div class="footer wf-section">
     <div class="footer-container w-container">
-      <div class="text-block">Copyright © 2010 Restaurant Kellari</div>
+      <div class="text-block">Copyright © 2010-2023 Restaurant Kellari · Gutsplatz 1 16515 Oranienburg · Telefon: 03301 57 55 49</div>
       <a href="index.html" class="link-5">Home</a>
       <a href="galerie.html" class="link-6">Galerie</a>
       <a href="speisekarte.html" aria-current="page" class="link-7 w--current">Speisekarte</a>
