--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Jan 14 2023 23:06:37 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Jan 15 2023 02:56:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63b58a0ebe4a86637fbdf4e7" data-wf-site="63b58a0dbe4a86ab12bdf4e1" lang="de">
 <head>
   <meta charset="utf-8">
@@ -69,7 +69,7 @@
       <div class="container w-container">
         <div class="menu-text-box">
           <h2 class="title-tag">Speisekarte</h2>
-          <p class="paragraph _2xl">Unsere Speisekarte bietet Ihnen eine Auswahl an leckeren Gerichten, die mit größter Aufmerksamkeit und Leidenschaft zubereitet werden.</p>
+          <p class="paragraph-3">Unsere Speisekarte bietet Ihnen eine Auswahl an leckeren Gerichten, die mit größter Aufmerksamkeit und Leidenschaft zubereitet werden.</p>
         </div>
         <div id="w-node-_7c217b0f-36b8-7db0-bc0b-a817120db1e6-7fbdf4e7" data-current="Tab 1" data-easing="ease" data-duration-in="300" data-duration-out="100" class="menu-tabs w-tabs">
           <div class="menu-tab-buttons w-tab-menu">
@@ -88,17 +88,17 @@
           </div>
           <div class="menu-tabs-content w-tab-content">
             <div data-w-tab="Tab 1" class="w-tab-pane w--tab-active">
-              <a href="speisekarte.html" class="menu-link-block w-inline-block"><img sizes="(max-width: 479px) 83vw, (max-width: 767px) 89vw, (max-width: 991px) 42vw, (max-width: 1439px) 44vw, 624px" srcset="images/speisekarte_front.pdf-p-500.png 500w, images/speisekarte_front.pdf-p-800.png 800w, images/speisekarte_front.pdf-p-1080.png 1080w, images/speisekarte_front.pdf-p-1600.png 1600w, images/speisekarte_front.pdf.png 2480w" src="images/speisekarte_front.pdf.png" loading="lazy" alt="menu front
+              <a href="speisekarte.html" class="menu-link-block w-inline-block"><img sizes="100vw" srcset="images/speisekarte_front.pdf-p-500.png 500w, images/speisekarte_front.pdf-p-800.png 800w, images/speisekarte_front.pdf-p-1080.png 1080w, images/speisekarte_front.pdf-p-1600.png 1600w, images/speisekarte_front.pdf.png 2480w" src="images/speisekarte_front.pdf.png" loading="lazy" alt="menu front
 " class="image-7"></a>
             </div>
             <div data-w-tab="Tab 2" class="w-tab-pane">
-              <a href="speisekarte.html" class="menu-link-block w-inline-block"><img sizes="(max-width: 479px) 83vw, (max-width: 767px) 89vw, (max-width: 991px) 42vw, (max-width: 1439px) 44vw, 624px" srcset="images/monatskarte_front.jpg 500w, images/monatskarte_front.jpg 800w, images/monatskarte_front.jpg 1080w, images/monatskarte_front.jpg 2480w" src="images/monatskarte_front.jpg" loading="lazy" alt="menu" class="image-8"></a>
+              <a href="speisekarte.html" class="menu-link-block w-inline-block"><img sizes="100vw" srcset="images/monatskarte_front-p-500.jpg 500w, images/monatskarte_front-p-800.jpg 800w, images/monatskarte_front-p-1080.jpg 1080w, images/monatskarte_front.jpg 2480w" src="images/monatskarte_front.jpg" loading="lazy" alt="menu" class="image-8"></a>
             </div>
             <div data-w-tab="Tab 4" class="w-tab-pane">
-              <a href="speisekarte.html" target="_blank" class="menu-link-block w-inline-block"><img sizes="(max-width: 479px) 83vw, (max-width: 767px) 89vw, (max-width: 991px) 42vw, (max-width: 1439px) 44vw, 624px" srcset="images/weinkarte_front-p-500.png 500w, images/weinkarte_front-p-800.png 800w, images/weinkarte_front.png 2480w" src="images/weinkarte_front.png" loading="lazy" alt="wine menu" class="image-9"></a>
+              <a href="speisekarte.html" target="_blank" class="menu-link-block w-inline-block"><img sizes="100vw" srcset="images/weinkarte_front-p-500.png 500w, images/weinkarte_front-p-800.png 800w, images/weinkarte_front.png 2480w" src="images/weinkarte_front.png" loading="lazy" alt="wine menu" class="image-9"></a>
             </div>
             <div data-w-tab="Tab 3" class="w-tab-pane">
-              <a href="speisekarte.html" target="_blank" class="menu-link-block w-inline-block"><img sizes="(max-width: 479px) 83vw, (max-width: 767px) 89vw, (max-width: 991px) 42vw, (max-width: 1439px) 44vw, 624px" srcset="images/weinkarte_front.pdf-p-500.png 500w, images/weinkarte_front.pdf-p-800.png 800w, images/weinkarte_front.pdf.png 2480w" src="images/weinkarte_front.pdf.png" loading="lazy" alt="wine menu front" class="image-10"></a>
+              <a href="speisekarte.html" target="_blank" class="menu-link-block w-inline-block"><img sizes="100vw" srcset="images/weinkarte_front.pdf-p-500.png 500w, images/weinkarte_front.pdf-p-800.png 800w, images/weinkarte_front.pdf.png 2480w" src="images/weinkarte_front.pdf.png" loading="lazy" alt="wine menu front" class="image-10"></a>
             </div>
           </div>
         </div>
@@ -156,7 +156,7 @@
   </div>
   <div class="footer wf-section">
     <div class="footer-container w-container">
-      <div class="text-block">Copyright © 2010 Restaurant Kellari</div>
+      <div class="text-block">Copyright © 2010-2023 Restaurant Kellari · Gutsplatz 1 16515 Oranienburg · Telefon: 03301 57 55 49</div>
       <a href="index.html" aria-current="page" class="link-5 w--current">Home</a>
       <a href="galerie.html" class="link-6">Galerie</a>
       <a href="speisekarte.html" class="link-7">Speisekarte</a>
